# anthro-benchmark

./: .gitignore  README.md  anthro_eval_cli.py  pyproject.toml
anthro_benchmark/analysis/: analysis.py
anthro_benchmark/classifier/: classifiers.py  cue_definitions.py  cue_definitions_old.py  rating.py
anthro_benchmark/core/: llm_client.py  roles.py
anthro_benchmark/generator/: generator.py
