[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anthro-benchmark"
version = "0.1.0"
authors = [
  { name="Lujain Ibrahim", email="author@example.com" },
]
description = "A library for generating, rating, and analyzing dialogues to evaluate anthropomorphic behaviors in LLMs."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "absl-py",
    "litellm",
    "pandas",
    "plotly",
    "kaleido",
    "google-cloud-aiplatform>=1.38",
    "tenacity",
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/google-deepmind/anthro-benchmark"
"Bug Tracker" = "https://github.com/google-deepmind/anthro-benchmark/issues"

# Define the command-line script entry point
[project.scripts]
anthro-eval = "anthro_eval_cli:main" 

[tool.setuptools]
py-modules = ["anthro_eval_cli"]

[tool.setuptools.packages.find]
include = ["anthro_benchmark*"]
